adding git-repo-link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#profile">Slack Profile</a></li>
                 <li><a href="#date">Date/Time</a></li>
                 <li><a href="#track" data-testid="myTrack">Track</a></li>
-                <li><a href="https://github.com/Unknownghost001"  class="btn">GitHub</a></li>
+                <li><a href="https://github.com/Unknownghost001/hollazuristage1.github.io"  class="btn">GitHub</a></li>
             </ul>
 
         </nav>
@@ -39,7 +39,7 @@
             <section class="container" id="date">
                 <p>Today is <span id="day" data-testid="curentDayOfTheWeek"></span> hope you have check your schedule</p>
                 <p>The time is: <span id="time" data-testid="currentUTCTime"></span></p>
-                <p>Check out the source code for this task on my  <a href="https://github.com/Unknownghost001" class="btn" data-testid="githubURL">GitHub</a></p>
+                <p>Check out the source code for this task on my  <a href="https://github.com/Unknownghost001/hollazuristage1.github.io" class="btn" data-testid="githubURL">GitHub</a></p>
             </section>
         </main>
     </body>
