--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 </li>
                 <li><a href="#profile">Slack Profile</a></li>
                 <li><a href="#date">Date/Time</a></li>
-                <li><a href="#track" data-testid="myTrack">Track</a></li>
-                <li><a href="https://github.com/Unknownghost001/hollazuristage1.github.io"  class="btn">GitHub</a></li>
+                <li><a href="#track">Track</a></li>
+                <li><a href="https://github.com/Unknownghost001/hollazuristage1.github.io"  class="btn" target="_blank">GitHub</a></li>
             </ul>
 
         </nav>
@@ -29,17 +29,17 @@
                 <div class="profile" id="profile">
                     <img src="/Slackpic.jpeg" alt="Holla" data-testid="slackDisplayImage">
                     <ul>
-                    <li data-testid="slackUserName">Name:  Babatunde .O Ekemode</li>
+                    <li data-testid="slackUserName">Babatunde .O Ekemode</li>
                     <li>Username: Holla</li>
                     <li>Gender: Male</li>
-                    <li id="track">Track: Frontend Track</li>
+                    <li id="track" data-testid="myTrack">Frontend Track</li>
                     </ul>
                 </div>
             </section>
             <section class="container" id="date">
-                <p>Today is <span id="day" data-testid="curentDayOfTheWeek"></span> hope you have check your schedule</p>
-                <p>The time is: <span id="time" data-testid="currentUTCTime"></span></p>
-                <p>Check out the source code for this task on my  <a href="https://github.com/Unknownghost001/hollazuristage1.github.io" class="btn" data-testid="githubURL">GitHub</a></p>
+                <span id="day" data-testid="curentDayOfTheWeek"></span>
+                 <span id="time" data-testid="currentUTCTime"></span>
+                <a href="https://github.com/Unknownghost001/hollazuristage1.github.io" class="btn" data-testid="githubURL" target="_blank">GitHub</a></p>
             </section>
         </main>
     </body>
