--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#profile">Slack Profile</a></li>
                 <li><a href="#date">Date/Time</a></li>
                 <li><a href="#track">Track</a></li>
-                <li><a href="https://github.com/Unknownghost001/hollazuristage1.github.io"  class="btn" target="_blank">GitHub</a></li>
+                <li><a href="https://github.com/Unknownghost001/hollazuristage1.github.io"  class="btn" target="_blank" data-testid="githubURL" >GitHub</a></li>
             </ul>
 
         </nav>
@@ -29,17 +29,15 @@
                 <div class="profile" id="profile">
                     <img src="/Slackpic.jpeg" alt="Holla" data-testid="slackDisplayImage">
                     <ul>
-                    <li data-testid="slackUserName">Babatunde .O Ekemode</li>
-                    <li>Username: Holla</li>
-                    <li>Gender: Male</li>
+                    <li>Babatunde .O Ekemode</li>
+                    <li data-testid="slackUserName">Username: Holla</li>
+                    <li>
+                          <span id="day" data-testid="curentDayOfTheWeek"></span>
+                 <span id="time" data-testid="currentUTCTime"></span>
+                    </li>
                     <li id="track" data-testid="myTrack">Frontend Track</li>
                     </ul>
                 </div>
-            </section>
-            <section class="container" id="date">
-                <span id="day" data-testid="curentDayOfTheWeek"></span>
-                 <span id="time" data-testid="currentUTCTime"></span>
-                <a href="https://github.com/Unknownghost001/hollazuristage1.github.io" class="btn" data-testid="githubURL" target="_blank">GitHub</a></p>
             </section>
         </main>
     </body>
