--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
                 <div class="profile" id="profile">
                     <img src="/Slackpic.jpeg" alt="Holla" data-testid="slackDisplayImage">
                     <ul>
-                    <li>Babatunde .O Ekemode</li>
-                    <li data-testid="slackUserName">Username: Holla</li>
+                    <li data-testid="slackUserName">Babatunde .O Ekemode</li>
                     <li>
                           <span id="day" data-testid="curentDayOfTheWeek"></span>
-                 <span id="time" data-testid="currentUTCTime"></span>
+                          <span id="time" data-testid="currentUTCTime"></span>
                     </li>
                     <li id="track" data-testid="myTrack">Frontend Track</li>
                     </ul>
