--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="bio">
             <h1 data-testid="slackUserName">Babatube .O Ekemode</h1>
-            <img src="Slackpic.jpeg" alt="">
+            <img src="Slackpic.jpeg" alt="Babatube .O Ekemode" data-testid="slackDisplayImage">
         </div>
         
         <div class="daytime">
