--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container">
         <div class="bio">
-            <h1 data-testid="slackUserName">HollamiLaykong Ekemode</h1>
-            <img src="Slackpic.jpeg" alt="HollamiLaykong Ekemode" data-testid="slackDisplayImage">
+            <h1 data-testid="slackUserName">HollamiLaykong</h1>
+            <img src="Slackpic.jpeg" alt="HollamiLaykong" data-testid="slackDisplayImage">
         </div>
         
         <div class="daytime">
